{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 84,
  "lineage": "6a0a769b-f877-0ba2-8df1-ce39ca5911fc",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-09-08T12:33:49.940-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/training-ground-397918/global/firewalls/allow-http",
            "log_config": [],
            "name": "allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/training-ground-397918/global/networks/training-vpc",
            "priority": 1000,
            "project": "training-ground-397918",
            "self_link": "https://www.googleapis.com/compute/v1/projects/training-ground-397918/global/firewalls/allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rabbitmq",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "15672"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-09-03T13:56:37.371-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/training-ground-397918/global/firewalls/allow-rabbitmq",
            "log_config": [],
            "name": "allow-rabbitmq",
            "network": "https://www.googleapis.com/compute/v1/projects/training-ground-397918/global/networks/training-vpc",
            "priority": 1000,
            "project": "training-ground-397918",
            "self_link": "https://www.googleapis.com/compute/v1/projects/training-ground-397918/global/firewalls/allow-rabbitmq",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "rabbitmq"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-09-03T13:56:37.313-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/training-ground-397918/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/training-ground-397918/global/networks/training-vpc",
            "priority": 1000,
            "project": "training-ground-397918",
            "self_link": "https://www.googleapis.com/compute/v1/projects/training-ground-397918/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "rabbitmq",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20230814",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/training-ground-397918/zones/us-west1-a/disks/rabbitmq-vm-0"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/training-ground-397918/zones/us-west1-a/instances/rabbitmq-vm-0",
            "instance_id": "9175267469962955192",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "rabbitmq:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQD11hVcdJGsm7I1Hd3D3vjAbe9zOVTIsERRAaKjUHeovTqz4mOLkvoHbkzOerVXXaAS1Jx7Iaz7hoUTr8+uiRb3b7LymzfbFexRIeAlCS/gdMJcW3HetqRRAh/u45o5NecS2xyIlYtIPrY87kPoLBmI1iFpdAksNP7wjv+Bb0WKsssgxafu8nflF0XYNYabfrReGWToftdVYtZXy9iHp6Pn4lCypZKUccF28msQ2LamEHuxIHPFQ8oKejkRqxEsy5OxluBgo0TPGMASQbulIr6+yI4MchLJZygj8jzcls9NtK45zMNMgQpXJgJUp7FXRf+m/D/HXgVTg6LmGXhsNcKSfb2z67UIgpHp7sGbEF5cXj16D6FiK5QjV2rjaAfiswSDF5Djcx32Q2+i0MKrB+o5wW3INxqUw7eNhoA0f35D [...]
            },
            "metadata_fingerprint": "4Zs8tPD6YpY=",
            "metadata_startup_script": "sudo apt-get update; sudo apt-get install -yq build-essential python3-pip nodejs vim; curl -fsSL https://get.docker.com -o get-docker.sh ; sh ./get-docker.sh ; groupadd docker; usermod -aG docker rabbitmq ; ",
            "name": "rabbitmq-vm-0",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.247.48.221",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/training-ground-397918/global/networks/training-vpc",
                "network_ip": "10.0.1.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/training-ground-397918/regions/us-west1/subnetworks/public-facing-subnet",
                "subnetwork_project": "training-ground-397918"
              }
            ],
            "project": "training-ground-397918",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/training-ground-397918/zones/us-west1-a/instances/rabbitmq-vm-0",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http",
              "rabbitmq",
              "ssh"
            ],
            "tags_fingerprint": "0GMtJtouhtM=",
            "zone": "us-west1-a"
          },
          "dependencies": [
            "google_compute_subnetwork.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/training-ground-397918/global/networks/training-vpc",
            "mtu": 1460,
            "name": "training-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "training-ground-397918",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/training-ground-397918/global/networks/training-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-09-03T13:56:39.022-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/training-ground-397918/regions/us-west1/subnetworks/public-facing-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "public-facing-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/training-ground-397918/global/networks/training-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "training-ground-397918",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/training-ground-397918/regions/us-west1/subnetworks/public-facing-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}